###############################################################################
# Copyright (c) 2013      Los Alamos National Security, LLC.
#                         All rights reserved.
################################################################################

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src tests

EXTRA_DIST = \
AUTHORS README THANKS COPYRIGHT autogen

