###############################################################################
# Copyright (c) 2013      Los Alamos National Security, LLC.
#                         All rights reserved.
################################################################################

ACLOCAL_AMFLAGS = -Im4 -Isrc/hwloc/config

SUBDIRS = \
src \
tests \
demos

EXTRA_DIST = \
AUTHORS README THANKS COPYRIGHT NOTES autogen contrib

AM_CFLAGS = $(HWLOC_EMBEDDED_CFLAGS)

AM_CPPFLAGS = $(HWLOC_EMBEDDED_CPPFLAGS)
