###############################################################################
# Copyright (c)      2016 Los Alamos National Security, LLC.
#                         All rights reserved.
################################################################################

EXTRA_DIST = \
builds \
doxyfile

all-local:
	$(DOXYGEN) doxyfile

clean-local:
	rm -rf html latex
