#
# Copyright (c) 2016-2019 Triad National Security, LLC
#                         All rights reserved.
#
# This file is part of the libquo project. See the LICENSE file at the
# top-level directory of this distribution.
#

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libquo.pc

# these are generated
MOSTLYCLEANFILES = $(pkgconfig_DATA)
