###############################################################################
# Copyright (c) 2013      Los Alamos National Security, LLC.
#                         All rights reserved.
################################################################################

lib_LTLIBRARIES = \
libquo.la

libquo_la_SOURCES = \
quo-private.h \
quo-hwloc.h quo-hwloc.c \
quo-mpi.h quo-mpi.c \
quo.h quo.c

libquo_la_CFLAGS =
libquo_la_LDFLAGS =
